--- a/force-app/main/default/lwc/webcomponent1/webcomponent1.html
+++ b/force-app/main/default/lwc/webcomponent1/webcomponent1.html
@@ -6,7 +6,7 @@
             Card Title = {greeting}
         </h3>
 
-        <lightning-map map-markers={mapMarkers}></lightning-map>
+        <lightning-map map-markers={mapMarkers} zoom-level={zoom}></lightning-map>
         
         <div slot="footer">
                 <lightning-badge label="Tag1"></lightning-badge>
