--- a/force-app/main/default/lwc/ListContactsToDeliver/ListContactsToDeliver.html
+++ b/force-app/main/default/lwc/ListContactsToDeliver/ListContactsToDeliver.html
@@ -1,5 +1,10 @@
 <template>
-
+        
+    <lightning-button
+        variant="brand"
+        label="Submit"
+        onclick={handleButtonClick}></lightning-button>
+    
     <div class="slds-m-around_medium">
 
         <template if:true={contacts}>
