adding and removing markers ok

--- a/force-app/main/default/lwc/ListContactsToDeliver/ListContactsToDeliver.html
+++ b/force-app/main/default/lwc/ListContactsToDeliver/ListContactsToDeliver.html
@@ -13,6 +13,7 @@
                 <lightning-card key={c.Id} title={c.Name} data-contactid={c.Id} icon-name="custom:custom63">                                          
         
                     <p>Address: {c.MailingStreet}</p>
+                    <p>Lat: {c.MailingLatitude} | Lon: {c.MailingLongitude}</p>
                     
                     <lightning-button-icon-stateful 
                         icon-name="utility:like" 
