--- a/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
+++ b/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
@@ -1,8 +1,14 @@
 <template>
 
     <lightning-card>
-        <!-- <lightning-map map-markers={mapMarkers} zoom-level={zoom}></lightning-map> -->
-        <!-- Here's the div LeafletJS will use -->
+
+        <lightning-button 
+            onclick={handleCallAPI} 
+            variant="brand" 
+            label="Calculate Optimal Flight Path"
+            disabled={canCallAPI}>
+        </lightning-button>
+
         <div style="height: 400px;" class="LeafMap" lwc:dom="manual"></div>
     </lightning-card>
 
