--- a/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
+++ b/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
@@ -5,7 +5,7 @@
         <lightning-button 
             onclick={handleCallAPI} 
             variant="brand" 
-            label="Calculate Optimal Flight Path"
+            label="Calculate Optimal Flight Path on Heroku"
             disabled={canCallAPI}>
         </lightning-button>
 
