--- a/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
+++ b/force-app/main/default/lwc/mapLocationsToDeliver/mapLocationsToDeliver.html
@@ -1,7 +1,7 @@
 <template>
 
     <lightning-card>
-        <p>Seconds to compute: {timeTakenToCompute} | Meters travelled: {metersTravelled}</p>
+        <h1>Seconds to compute: {timeTakenToCompute} | Meters travelled: {metersTravelled}</h1>
         <lightning-button 
             onclick={handleCallAPI} 
             variant="brand" 
