--- a/force-app/main/default/lwc/listContactsToDeliver/listContactsToDeliver.html
+++ b/force-app/main/default/lwc/listContactsToDeliver/listContactsToDeliver.html
@@ -6,7 +6,8 @@
                 <lightning-card key={c.Id} title={c.Name} data-contactid={c.Id} icon-name="custom:custom63">                                          
         
                     <p>Address: {c.MailingStreet}</p>
-                    <p>Lat: {c.MailingLatitude} | Lon: {c.MailingLongitude}</p>
+                    <p>Lat: {c.MailingLatitude}</p> 
+                    <p>Lon: {c.MailingLongitude}</p>
                     
                     <lightning-button-icon-stateful 
                         icon-name="utility:like" 
